crates/icydb-core/tests/ui/db/codec_module_private.rs
use icydb_core::db::codec::deserialize_row;

fn main() {}
